--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ script:
   - mvn test
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+env:
+  global:
+    - CODECOV_TOKEN="8b9740ea-b59b-431a-953e-6093823ff8ea"
